package edu.fiuba.algo3.modelo;

public interface Movedor {

    public Parcela mover(Enemigo enemigo);

	public void ralentizar();

}
